[package]
name = "ovr-web3-rpc-core"
version = "0.1.0"
authors = ["Overealityio"]
edition = "2021"
description = "RPC traits of Ethereum."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ethereum-types = "0.13.1"
futures = "0.3.16"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-pubsub = "18.0"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
